syntax = "proto3";
// system_role 系统角色
package role;
option go_package = "cloud/service/system/role;role";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SystemRoleObject 数据对象
message SystemRoleObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //角色编号
	// @inject_tag: db:"name" json:"name"
	optional string name = 2; //角色名称
	// @inject_tag: db:"code" json:"code"
	optional string code = 3; //角色权限字符串
	// @inject_tag: db:"sort" json:"sort"
	optional int32 sort = 4; //显示顺序
	// @inject_tag: db:"data_scope" json:"dataScope"
	optional int32 data_scope = 5; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
	// @inject_tag: db:"data_scope_dept" json:"dataScopeDept"
	optional bytes data_scope_dept = 6; //数据范围(指定部门数组)
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 7; //角色状态（0正常 1停用）
	// @inject_tag: db:"type" json:"type"
	optional int32 type = 8; //角色类型(1内置/2定义)
	// @inject_tag: db:"remark" json:"remark"
	optional string remark = 9; //备注
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 10; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 11; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 12; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 13; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 14; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 15; //更新时间
	// @inject_tag: db:"menu_ids" json:"menuIds"
	optional bytes menu_ids = 16; //菜单权限
}
// SystemRoleTotalResponse 列表数据总量
message SystemRoleTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemRoleCreateRequest 创建数据请求
message SystemRoleCreateRequest {
	SystemRoleObject data = 1;
}
// SystemRoleCreateResponse 创建数据响应
message SystemRoleCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemRoleUpdateRequest 更新数据请求
message SystemRoleUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //角色编号
	SystemRoleObject data = 2;
}
// SystemRoleUpdateResponse 更新数据响应
message SystemRoleUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemRoleDeleteRequest 删除数据请求
message SystemRoleDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //角色编号
}
// SystemRoleDeleteResponse 删除数据响应
message SystemRoleDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemRoleRequest 查询单条数据请求
message SystemRoleRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //角色编号
}
// SystemRoleResponse 查询单条数据响应
message SystemRoleResponse {
	int64 code = 1;
	string msg = 2;
	SystemRoleObject data = 3;
}
// SystemRoleRecoverRequest 恢复数据请求
message SystemRoleRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //角色编号
}
// SystemRoleRecoverResponse 删除数据响应
message SystemRoleRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemRoleDropRequest 清理数据请求
message SystemRoleDropRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //角色编号
}
// SystemRoleDropResponse 清理数据响应
message SystemRoleDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemRoleListRequest 列表数据
message SystemRoleListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"type" json:"type"
	optional int32 type = 3; // 角色类型(1内置/2定义)
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 角色状态（0正常 1停用）
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 角色名称

	// @inject_tag: db:"pagination" json:"pagination"
	optional pagination.PaginationRequest pagination = 6; // 分页
}

// SystemRoleListResponse 数据响应
message SystemRoleListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemRoleObject data = 3;
}
// SystemRoleListTotalRequest 列表数据
message SystemRoleListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"type" json:"type"
	optional int32 type = 3; // 角色类型(1内置/2定义)
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 角色状态（0正常 1停用）
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 角色名称

}


// SystemRoleService 服务
service SystemRoleService{
	rpc SystemRoleCreate(SystemRoleCreateRequest) returns (SystemRoleCreateResponse);
	rpc SystemRoleUpdate(SystemRoleUpdateRequest) returns (SystemRoleUpdateResponse);
	rpc SystemRoleDelete(SystemRoleDeleteRequest) returns (SystemRoleDeleteResponse);
	rpc SystemRole(SystemRoleRequest) returns (SystemRoleResponse);
	rpc SystemRoleRecover(SystemRoleRecoverRequest) returns (SystemRoleRecoverResponse);
	rpc SystemRoleDrop(SystemRoleDropRequest) returns (SystemRoleDropResponse);
	rpc SystemRoleList(SystemRoleListRequest) returns (SystemRoleListResponse);
	rpc SystemRoleListTotal(SystemRoleListTotalRequest) returns (SystemRoleTotalResponse);
}